--- a/public/dev-folio/css/style.css
+++ b/public/dev-folio/css/style.css
@@ -34,6 +34,11 @@ a:hover {
   transition: all 0.5s ease-in-out;
 }
 
+.center{
+  display: block;
+  margin: 0px auto;
+}
+
 .p-r {
   position: relative;
 }
@@ -335,7 +340,7 @@ a:hover {
   font-size: 16px;
   border-radius: 50%;
   right: 15px;
-  bottom: 15px;
+  bottom: 90px;
   transition: background 0.5s;
   z-index: 11;
 }
@@ -1266,6 +1271,6 @@ footer .credits a {
 
 @media (max-width: 768px) {
   .back-to-top {
-    bottom: 15px;
+    bottom: 90px;
   }
 }
