--- a/public/dev-folio/css/style.css
+++ b/public/dev-folio/css/style.css
@@ -352,7 +352,7 @@ a:hover {
 
 /* Prelaoder */
 
-#preloader {
+#preloader{
   position: fixed;
   top: 0;
   left: 0;
@@ -363,7 +363,19 @@ a:hover {
   background: #fff;
 }
 
-#preloader:before {
+#preloader-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background: #ffffff9e;
+  display: none;
+}
+
+#preloader:before,#preloader-form:before {
   content: "";
   position: fixed;
   top: calc(50% - 30px);
